--- a/index.html
+++ b/index.html
@@ -356,10 +356,10 @@
                 <path d="M40 85L60 85" stroke="#64ffda" stroke-width="2" stroke-linecap="round"/>
             </svg>
             <h1 class="text-5xl font-extrabold text-white mb-4 leading-tight" style="text-shadow: 0 0 10px rgba(100, 255, 218, 0.8);">
-                Shape Your Digital Future!
+                Your Digital Blueprint
             </h1>
             <button id="startButton" class="button-primary">
-                Click Here To Start Your Journey with SIMbot
+                Let SIMbot draw the plans. Click to begin.
             </button>
         </div>
 
