--- a/index.html
+++ b/index.html
@@ -598,31 +598,38 @@
             document.querySelector('#processingScreen p:first-of-type').textContent = "Frankie the SIMbot is crafting your personalised insights...";
             document.querySelector('#processingScreen p:last-of-type').textContent = "Analysing your digital DNA with ✨AI✨.";
 
-            let textPrompt = `You are SIMbot, an expert in Information Systems from SIM, specialising in helping young people understand their digital lives. Based on the following answers from a user about their digital habits, provide a concise 'Digital Snapshot' (1-2 sentences) summarising their current digital engagement and awareness, and a single 'Future Digital Tip' (1 sentence) that encourages them to explore a relevant INFO101 topic. Your tone should be helpful, encouraging, and knowledgeable, reflecting SIM's approach. Use New Zealand English spelling, grammar, and phrasing.
+            // --- UPDATED PROMPT ---
+            let textPrompt = `You are Frankie the SIMbot, an expert in Information Systems from SIM, specialising in helping young people understand their digital lives. Your task is to analyse a user's answers about their digital habits and generate a personalised response in JSON format.
 
-User Answers:
+**Instructions:**
+1.  **Analyse User's Answers:** Carefully review the user's choices provided below.
+2.  **Select Most Relevant Theme:** Based on the user's answers, choose the single most relevant question from the "INFO101 Themes" list that would be most helpful for them to explore next.
+3.  **Generate 'Digital Snapshot':** Write a concise and encouraging summary (1-2 sentences) of the user's current digital persona based on their answers.
+4.  **Generate 'Future Digital Tip':** Create a tip that combines two parts. First, it must start *exactly* with the phrase "Frankie thinks you should ask one of the SIM team " followed by the most relevant INFO101 question you selected, enclosed in single quotes. Second, add a full stop right after the closing single quote. Then, add one to two helpful sentences that explain *why* this question is relevant and offer a practical insight.
+5.  **Tone & Style:** Your tone must be helpful, encouraging, and knowledgeable. Use New Zealand English spelling and phrasing.
+
+**User Answers:**
 `;
             questions.forEach(q => {
                 const userAnswer = userAnswers[q.id];
                 const selectedOptionText = q.options.find(opt => opt.value === userAnswer)?.text || 'N/A';
-                textPrompt += `${q.questionText} - User chose: "${selectedOptionText}"\n`;
+                textPrompt += `- ${q.questionText} User chose: "${selectedOptionText}"\n`;
             });
 
             textPrompt += `
-INFO101 Themes to consider (refer to these by their full title in the tip):
-- Module 1: What are the building blocks of my Digital Life?
-- Module 2: What is the technology that underpins my Digital Life?
-- Module 3: How do I organise my Digital Life?
-- Module 4: Do my Digital Habits matter?
-- Module 5: What is my Digital Footprint?
-- Module 6: What are the consequences of my Digital Behaviour?
-- Module 7: How can I be the Architect of my Digital Life?
+**INFO101 Themes (Choose one for the tip):**
+- What are the building blocks of my Digital Life?
+- What is the technology that underpins my Digital Life?
+- How do I organise my Digital Life?
+- Do my Digital Habits matter?
+- What is my Digital Footprint?
+- What are the consequences of my Digital Behaviour?
+- How can I be the Architect of my Digital Life?
 
-Format your response as a JSON object with two keys: "snapshot" and "tip".
-Example:
+**JSON Output Example:**
 {
-    "snapshot": "Your digital life is vibrant and connected, showing a keen interest in social interactions.",
-    "tip": "Consider exploring 'Module 5: What is my Digital Footprint?' to better understand and manage your digital footprint!"
+    "snapshot": "It looks like you're thoughtful about what you see online and how you engage with it. That's a great habit for navigating the digital world!",
+    "tip": "Frankie thinks you should ask one of the SIM team 'What is my Digital Footprint?'. Being aware of the trail you leave online is the first step to actively shaping your digital reputation."
 }
 `;
 
